--- a/mysampleUR.yml
+++ b/mysampleUR.yml
@@ -1,16 +1,15 @@
 ---
-- hosts: mywebservers
+- hosts: mysample
   become: yes
-  tasks: 
-  - name: i want to install web server on ubuntu16 nodes
-    apt: 
-      name: apache2
-      state: present
-    when: ansible_os_family =="Debian"
+  tasks:
+  - name: i want to install web server on ubuntu18 node
+    apt:
+     name: apache2
+     state: present
+    when: ansible_os_family =="debian"
 
   - name: i want to install web server on RedHat node
     yum:
       name: httpd
       state: present
     when: ansible_os_family =="RedHat"
-  
