--- a/mysampleUR.yml
+++ b/mysampleUR.yml
@@ -2,14 +2,23 @@
 - hosts: all
   become: yes
   tasks:
-  - name: i want to install web server on ubuntu18 node
+  - name: i want to install web server on ubuntu18 nodes
     apt:
      name: apache2
      state: present
     when: ansible_os_family =="Debian"
+  - name: i want to start webserver on ubuntu18 nodes
+    service:
+       name: apache2
+       state: started
+       when: ansible_os_family =="Debian"
 
-  - name: i want to install web server on RedHat node
+  - name: i want to install web server on RedHat nodes
     yum:
       name: httpd
       state: present
+    when: ansible_os_family =="RedHat"
+  - name: i want to start webserver on RedHat nodes
+    service:
+    state: started
     when: ansible_os_family =="RedHat"
