--- a/mysampleUR.yml
+++ b/mysampleUR.yml
@@ -1,24 +1,25 @@
 ---
-- hosts: all
+- hosts: mywebservers
   become: yes
-  tasks:
-  - name: i want to install web server on ubuntu18 nodes
-    apt:
-     name: apache2
-     state: present
+  tasks: 
+  - name: i want to install web server on ubuntu16 nodes
+    apt: 
+      name: apache2
+      state: present
     when: ansible_os_family =="Debian"
-  - name: i want to start webserver on ubuntu18 nodes
-    service:
+  - name: i want to start webserver on ubuntu16 nodes
+    service: 
        name: apache2
        state: started
     when: ansible_os_family =="Debian"
 
-  - name: i want to install web server on RedHat nodes
+  - name: i want to install web server on RedHat node
     yum:
       name: httpd
       state: present
     when: ansible_os_family =="RedHat"
-  - name: i want to start webserver on RedHat nodes
+  - name: i want to start web servers on RedHat node
     service:
-    state: started
+      name: httpd
+      state: started
     when: ansible_os_family =="RedHat"
