--- a/mysampleUR.yml
+++ b/mysampleUR.yml
@@ -13,12 +13,12 @@
        state: started
     when: ansible_os_family =="Debian"
 
-  - name: i want to install web server on RedHat node
+  - name: i want to install web server on RedHat nodes
     yum:
       name: httpd
       state: present
     when: ansible_os_family =="RedHat"
-  - name: i want to start web servers on RedHat node
+  - name: i want to start web servers on RedHat nodes
     service:
       name: httpd
       state: started
